--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -39,8 +39,7 @@
                         <div class="rounded-lg overflow-hidden aspect-square">
                             <img src="@item.img?.ImagePath"
                                  class="w-full h-full object-cover"
-                                 alt="@item.product_name"
-                                 onerror="this.src='default-product.jpg'; this.onerror=null;" />
+                                 alt="@item.product_name" />
                         </div>
                         <h3 class="mt-4 font-semibold">@item.product_name</h3>
                         <div class="flex justify-center items-center space-x-2 mt-2">
