--- a/Web/Views/Product/GetAllProduct.cshtml
+++ b/Web/Views/Product/GetAllProduct.cshtml
@@ -185,8 +185,7 @@
                                             <div class="h-16 w-16 flex-shrink-0 mr-4">
                                                 <img src="@item.img?.ImagePath"
                                                      alt="Product Image"
-                                                     class="h-16 w-16 rounded-lg object-cover"
-                                                     onerror="this.onerror=null;this.src='default-image.png';" />
+                                                     class="h-16 w-16 rounded-lg object-cover"/>
                                             </div>
                                             <div>
                                                 <div class="font-medium text-gray-900">@item.product_name</div>
