--- a/Web/Views/Product/EditProduct.cshtml
+++ b/Web/Views/Product/EditProduct.cshtml
@@ -1,4 +1,4 @@
-﻿@model Application.DTO.VariantsProducts.CreateUpdateVariantsProductRequest
+﻿@model Application.Entities.Product
 <div class="p-6 sm:ml-64 bg-gray-50 min-h-screen">
     <div class="flex flex-col flex-1 overflow-hidden">
         <form asp-action="CreateVariant" asp-controller="Variant_Product" method="post">
