--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         <ul class="flex space-x-10 text-gray-700">
-                            <li><a asp-action="GetAllByIdUser" asp-controller="Orders" asp-route-id="@Guid.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier))"  class="hover:text-gray-900 text-xl font-medium">Women</a></li>
+                            <li><a class="hover:text-gray-900 text-xl font-medium">Women</a></li>
                             <li><a class="hover:text-gray-900 text-xl font-medium">Men</a></li>
                             <li><a class="hover:text-gray-900 text-xl font-medium">Company</a></li>
                             <li><a class="hover:text-gray-900 text-xl font-medium">Stores</a></li>
@@ -118,6 +118,9 @@
                     </div>
                     @if (User.Identity.IsAuthenticated)
                     {
+                        <a asp-action="GetAllByIdUser" asp-controller="Orders" asp-route-id="@Guid.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier))" class="text-gray-500 hover:text-gray-900 mr-2 ml-2">
+                            <i class="fas fa-history"></i>
+                        </a>
                         <div class="flex justify-center w-full">
                             <span class="text-gray-500 hover:text-gray-900 font-medium w-auto truncate">Hello @User.Identity.Name</span>
                         </div>
@@ -171,6 +174,7 @@
                                 <!-- Sign In link -->
                                 @if (!User.Identity.IsAuthenticated)
                                 {
+
                                     <a asp-controller="Account" asp-action="Login" class="-mx-3 block rounded-lg px-3 py-2.5 text-base/7 font-semibold text-gray-900 hover:bg-gray-50">Sign In</a>
                                 }
                                 <!-- Sign Up link -->
@@ -182,6 +186,13 @@
                                 <!-- Show LogOut if User is authenticated -->
                                 @if (User.Identity.IsAuthenticated)
                                 {
+
+                                }
+                                @if (User.Identity.IsAuthenticated)
+                                {
+                                    <a href="#" class="text-gray-500 hover:text-gray-900">
+                                        <i class="fas fa-history"></i>
+                                    </a>
                                     <form asp-controller="Account" asp-action="Logout" method="post">
                                         @Html.AntiForgeryToken() <!-- CSRF Token -->
                                         <button type="submit" class="text-gray-500 hover:text-gray-900 font-medium">Log Out</button>
