Don hang va chi tiet don hang

--- a/Web/Views/Product/GetAllProduct.cshtml
+++ b/Web/Views/Product/GetAllProduct.cshtml
@@ -185,8 +185,7 @@
                                             <div class="h-16 w-16 flex-shrink-0 mr-4">
                                                 <img src="@item.img?.ImagePath"
                                                      alt="Product Image"
-                                                     class="h-16 w-16 rounded-lg object-cover"
-                                                     onerror="this.onerror=null;this.src='default-image.png';" />
+                                                     class="h-16 w-16 rounded-lg object-cover"/>
                                             </div>
                                             <div>
                                                 <div class="font-medium text-gray-900">@item.product_name</div>
@@ -219,9 +218,9 @@
                                                     class="p-2 text-gray-500 bg-gray-100 rounded hover:bg-gray-200">
                                                 <i class="fas fa-eye text-sm"></i>
                                             </button>
-                                            <button class="p-2 text-gray-500 bg-gray-100 rounded hover:bg-gray-200">
+                                            <a asp-controller="Product" asp-action="EditProduct" asp-route-id="@item.product_id" class="p-2 text-gray-500 bg-gray-100 rounded hover:bg-gray-200">
                                                 <i class="fas fa-edit text-sm"></i>
-                                            </button>
+                                            </a>
                                             <a asp-controller="Product" asp-action="DeleteProduct" asp-route-id="@item.product_id" class="p-2 text-red-500 bg-red-50 rounded hover:bg-red-100">
                                                 <i class="fas fa-trash text-sm"></i>
                                             </a>
